--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,4 @@
 [tool.poetry]
-packages = [{ include = "mysite" }]
 
 [project]
 name = "mysite"
@@ -16,7 +15,9 @@ dependencies = [
     "django-filter (>=25.1,<26.0)",
     "django-debug-toolbar (>=5.2.0,<6.0.0)",
     "pillow (>=11.2.1,<12.0.0)",
-    "gunicorn (>=23.0.0,<24.0.0)"
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "sentry-sdk (>=2.30.0,<3.0.0)",
+    "drf-spectacular (>=0.28.0,<0.29.0)"
 ]
 
 
